@@ -25,6 +25,7 @@
       or oracle
     - LocalTransactionHandler: rollback on thrown Throwable
     - test on openjdk11
+    - EnumSet mapping support
 
 3.4.0
     [ NOTE: this release's git tags are missing due to maintainer error! ]
